# cppgame

./: CMakeLists.txt  PRD.md  RAPPORT_ACADEMIQUE.md  README.md
Headers/: AssetManager.h  AudioManager.h  Boss.h  Entity.h  Game.h  GameState.h  LevelManager.h  Player.h  UIManager.h  WorldObjects.h
src/: AssetManager.cpp  AudioManager.cpp  Boss.cpp  Boss.h  Entity.h  Game.cpp  Game.h  GameState.h  LevelManager.cpp  Player.cpp  Player.h  UIManager.cpp  WorldObjects.h  main.cpp
